--- a/ansible/server.json.j2
+++ b/ansible/server.json.j2
@@ -7,7 +7,7 @@
   "bootstrap_expect": {{ consul_server_nodes }},
   "client_addr": "0.0.0.0",
   "data_dir": "/opt/consul/data",
-  "datacenter": "consul-datacenter",
+  "datacenter": "{{ consul_region }}",
   "disable_remote_exec": true,
   "disable_update_check": true,
   "leave_on_terminate" : true,
